50 add support for separate loading of csv files (#51)
* Added templates with data-values
* Added SensorLineChart
* Automatic reload of templates
* Possibility of unload csv files
* Vertical and Horizontal zoom for the csv file charts
* Selection trace on the chart by clicking the map and on the map by clicking the chart.
* Zoom charts by selecting a rectangle
* Improved selection tool - see https://github.com/ugcs/UgCS-GeoHammer/issues/46
* Possibility to select traces, cut, and save for SCV files
* Reorganization of toolbars
* Updated icons & splash screen